Added Array function, update main code and variables, updated summary in html file.

--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -11,9 +11,8 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>This week I chose the theme of knights.  I used the same theme as last week and also went with a continuation of the story.</p>
+<p>A lot of outputs are in this week's story.  The flow is that my knight goes through training and then is evaluated against quests that could be given.</p>
 </article>
 <footer>
     <p>January 17, 2013, Rolando Velasco</p>
